# swagger.json
@@ -1,21 +1,21 @@
 {
     "openapi": "3.0.0",
     "info": {
-      "title": "API de Usuários e Peixes",
-      "description": "Documentação da API para gerenciamento de usuários e peixes",
+      "title": "API de Gerenciamento de Usuários e Peixes",
+      "description": "API para gerenciar informações de usuários e peixes.",
       "version": "1.0.0"
     },
     "servers": [
       {
         "url": "https://api-peixes-cxxg.vercel.app",
-        "description": "Servidor da API"
+        "description": "Servidor de Produção"
       }
     ],
     "paths": {
-      "/api/users/": {
+      "/api/users": {
         "post": {
-          "summary": "Criar um novo usuário",
-          "description": "Cria um novo usuário com os detalhes fornecidos",
+          "summary": "Cadastrar Usuário",
+          "description": "Cria um novo usuário.",
           "requestBody": {
             "required": true,
             "content": {
@@ -28,22 +28,22 @@
           },
           "responses": {
             "201": {
-              "description": "Usuário criado com sucesso"
+              "description": "Usuário criado com sucesso."
             },
             "400": {
-              "description": "Requisição inválida"
+              "description": "Requisição inválida."
             },
             "500": {
-              "description": "Erro interno do servidor"
+              "description": "Erro interno do servidor."
             }
           }
         },
         "get": {
-          "summary": "Obter todos os usuários",
-          "description": "Retorna uma lista de todos os usuários",
+          "summary": "Listar Usuários",
+          "description": "Lista todos os usuários cadastrados.",
           "responses": {
             "200": {
-              "description": "Lista de usuários",
+              "description": "Lista de usuários.",
               "content": {
                 "application/json": {
                   "schema": {
@@ -56,45 +56,56 @@
               }
             },
             "500": {
-              "description": "Erro interno do servidor"
+              "description": "Erro interno do servidor."
             }
           }
         }
       },
-      "/api/users/login": {
-        "post": {
-          "summary": "Login de um usuário",
-          "description": "Autentica um usuário",
+      "/api/users/{id}": {
+        "put": {
+          "summary": "Atualizar Usuário",
+          "description": "Atualiza um usuário existente.",
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "schema": {
+                "type": "string"
+              }
+            }
+          ],
           "requestBody": {
             "required": true,
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserLogin"
+                  "$ref": "#/components/schemas/User"
                 }
               }
             }
           },
           "responses": {
             "200": {
-              "description": "Login bem-sucedido"
+              "description": "Usuário atualizado com sucesso."
             },
-            "401": {
-              "description": "Não autorizado"
+            "400": {
+              "description": "Requisição inválida."
+            },
+            "404": {
+              "description": "Usuário não encontrado."
             },
             "500": {
-              "description": "Erro interno do servidor"
+              "description": "Erro interno do servidor."
             }
           }
-        }
-      },
-      "/api/users/peixes/{userId}": {
-        "get": {
-          "summary": "Obter peixes por ID de usuário",
-          "description": "Retorna uma lista de peixes associados a um ID de usuário específico",
+        },
+        "delete": {
+          "summary": "Remover Usuário",
+          "description": "Remove um usuário existente.",
           "parameters": [
             {
-              "name": "userId",
+              "name": "id",
               "in": "path",
               "required": true,
               "schema": {
@@ -104,7 +115,49 @@
           ],
           "responses": {
             "200": {
-              "description": "Lista de peixes",
+              "description": "Usuário removido com sucesso."
+            },
+            "404": {
+              "description": "Usuário não encontrado."
+            },
+            "500": {
+              "description": "Erro interno do servidor."
+            }
+          }
+        }
+      },
+      "/api/peixes": {
+        "post": {
+          "summary": "Cadastrar Peixe",
+          "description": "Cria um novo peixe.",
+          "requestBody": {
+            "required": true,
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Peixe"
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Peixe criado com sucesso."
+            },
+            "400": {
+              "description": "Requisição inválida."
+            },
+            "500": {
+              "description": "Erro interno do servidor."
+            }
+          }
+        },
+        "get": {
+          "summary": "Listar Peixes",
+          "description": "Lista todos os peixes cadastrados.",
+          "responses": {
+            "200": {
+              "description": "Lista de peixes.",
               "content": {
                 "application/json": {
                   "schema": {
@@ -117,47 +170,15 @@
               }
             },
             "500": {
-              "description": "Erro interno do servidor"
+              "description": "Erro interno do servidor."
             }
           }
         }
       },
       "/api/peixes/{id}": {
-        "get": {
-          "summary": "Obter detalhes de peixe por ID",
-          "description": "Retorna detalhes de um peixe associado a um ID específico",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "schema": {
-                "type": "string"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Detalhes do peixe",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/Peixe"
-                  }
-                }
-              }
-            },
-            "404": {
-              "description": "Peixe não encontrado"
-            },
-            "500": {
-              "description": "Erro interno do servidor"
-            }
-          }
-        },
         "put": {
-          "summary": "Atualizar peixe por ID",
-          "description": "Atualiza os detalhes de um peixe existente",
+          "summary": "Atualizar Peixe",
+          "description": "Atualiza um peixe existente.",
           "parameters": [
             {
               "name": "id",
@@ -173,29 +194,29 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PeixeUpdate"
+                  "$ref": "#/components/schemas/Peixe"
                 }
               }
             }
           },
           "responses": {
             "200": {
-              "description": "Peixe atualizado com sucesso"
+              "description": "Peixe atualizado com sucesso."
             },
             "400": {
-              "description": "Requisição inválida"
+              "description": "Requisição inválida."
             },
             "404": {
-              "description": "Peixe não encontrado"
+              "description": "Peixe não encontrado."
             },
             "500": {
-              "description": "Erro interno do servidor"
+              "description": "Erro interno do servidor."
             }
           }
         },
         "delete": {
-          "summary": "Deletar peixe por ID",
-          "description": "Remove um peixe existente",
+          "summary": "Remover Peixe",
+          "description": "Remove um peixe existente.",
           "parameters": [
             {
               "name": "id",
@@ -208,40 +229,13 @@
           ],
           "responses": {
             "200": {
-              "description": "Peixe deletado com sucesso"
+              "description": "Peixe removido com sucesso."
             },
             "404": {
-              "description": "Peixe não encontrado"
+              "description": "Peixe não encontrado."
             },
             "500": {
-              "description": "Erro interno do servidor"
-            }
-          }
-        }
-      },
-      "/api/peixes/": {
-        "post": {
-          "summary": "Criar um novo peixe",
-          "description": "Cria um novo peixe com os detalhes fornecidos",
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/PeixeCreate"
-                }
-              }
-            }
-          },
-          "responses": {
-            "201": {
-              "description": "Peixe criado com sucesso"
-            },
-            "400": {
-              "description": "Requisição inválida"
-            },
-            "500": {
-              "description": "Erro interno do servidor"
+              "description": "Erro interno do servidor."
             }
           }
         }
@@ -251,135 +245,48 @@
       "schemas": {
         "User": {
           "type": "object",
-          "required": [
-            "name",
-            "email",
-            "password"
-          ],
           "properties": {
             "name": {
               "type": "string"
             },
             "email": {
-             
-    "type": "string"
+              "type": "string"
+            },
+            "password": {
+              "type": "string"
+            }
           },
-          "password": {
-            "type": "string"
-          }
-        }
-      },
-      "UserLogin": {
-        "type": "object",
-        "required": [
-          "email",
-          "password"
-        ],
-        "properties": {
-          "email": {
-            "type": "string"
-          },
-          "password": {
-            "type": "string"
-          }
-        }
-      },
-      "Peixe": {
-        "type": "object",
-        "required": [
-          "ID_usuario",
-          "Nome",
-          "Especie",
-          "Alimentacao",
-          "Quantidade_comida",
-          "Vezes_comida_dia",
-          "Imagem_url"
-        ],
-        "properties": {
-          "ID_usuario": {
-            "type": "string"
-          },
-          "Nome": {
-            "type": "string"
-          },
-          "Especie": {
-            "type": "string"
-          },
-          "Alimentacao": {
-            "type": "string"
-          },
-          "Quantidade_comida": {
-            "type": "number"
-          },
-          "Vezes_comida_dia": {
-            "type": "number"
-          },
-          "Imagem_url": {
-            "type": "string"
-          }
-        }
-      },
-      "PeixeCreate": {
-        "type": "object",
-        "required": [
-          "ID_usuario",
-          "Nome",
-          "Especie",
-          "Alimentacao",
-          "Quantidade_comida",
-          "Vezes_comida_dia",
-          "Imagem_url"
-        ],
-        "properties": {
-          "ID_usuario": {
-            "type": "string"
-          },
-          "Nome": {
-            "type": "string"
-          },
-          "Especie": {
-            "type": "string"
-          },
-          "Alimentacao": {
-            "type": "string"
-          },
-          "Quantidade_comida": {
-            "type": "number"
-          },
-          "Vezes_comida_dia": {
-            "type": "number"
-          },
-          "Imagem_url": {
-            "type": "string"
-          }
-        }
-      },
-      "PeixeUpdate": {
-        "type": "object",
-        "properties": {
-          "ID_usuario": {
-            "type": "string"
-          },
-          "Nome": {
-            "type": "string"
-          },
-          "Especie": {
-            "type": "string"
-          },
-          "Alimentacao": {
-            "type": "string"
-          },
-          "Quantidade_comida": {
-            "type": "number"
-          },
-          "Vezes_comida_dia": {
-            "type": "number"
-          },
-          "Imagem_url": {
-            "type": "string"
+          "required": ["name", "email", "password"]
+        },
+        "Peixe": {
+          "type": "object",
+          "properties": {
+            "ID_usuario": {
+              "type": "string"
+            },
+            "Nome": {
+              "type": "string"
+            },
+            "Especie": {
+              "type": "string"
+            },
+           
+            "Alimentacao": {
+                "type": "string"
+              },
+              "Quantidade_comida": {
+                "type": "number"
+              },
+              "Vezes_comida_dia": {
+                "type": "number"
+              },
+              "Imagem_url": {
+                "type": "string"
+              }
+            },
+            "required": ["ID_usuario", "Nome", "Especie", "Alimentacao", "Quantidade_comida", "Vezes_comida_dia", "Imagem_url"]
           }
         }
       }
     }
-  }
-}
+      
